# wirebard

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  compose.yaml  install.sh
.github/workflows/: ci.yml  release.yml
docs/design/: peer-provisioning.md
samples/: README.md
samples/partials/backups/: 00-main.conf  10-alice.conf  20-baki-web01.conf  20-web01.conf  template.conf
samples/partials/roam/: 00-main.conf  10-laptop.conf
src/: CMakeLists.txt  alloc.cpp  alloc.h  apply.cpp  apply.h  check.cpp  check.h  cli.cpp  cli.h  commands.h  contract.cpp  contract.h  directives.cpp  directives.h  error.cpp  error.h  fs.cpp  fs.h  json.cpp  json.h  main.cpp  net.cpp  net.h  partial.cpp  partial.h  peer.cpp  peer.h  project.cpp  project.h  render.cpp  render.h  subprocess.cpp  subprocess.h  vars.cpp  vars.h
src/commands/: apply.cpp  build.cpp  check.cpp  common.h  list.cpp  network.cpp  peer.cpp  stubs.cpp
tests/: CMakeLists.txt  alloc_test.cpp  apply_test.cpp  check_test.cpp  cli_test.cpp  contract_test.cpp  fs_test.cpp  json_test.cpp  net_test.cpp  partial_test.cpp  peer_test.cpp  project_test.cpp  render_test.cpp  subprocess_test.cpp  vars_test.cpp
